# 3D_blackhole

./: CMakeLists.txt
include/: aux.hpp  constants.hpp  display-objects.hpp  physics.hpp  shaders.hpp
include/glad/: glad.h
shaders/: computeShader.cs  screenQuad.fs  screenQuad.vs
src/: aux.cpp  display-objects.cpp  glad.c  main.cpp
